--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<style>
+		.mesh {
+			fill: none;
+			stroke: #fff;
+			stroke-linecap: round;
+			stroke-linejoin: round;
+		}
+		.state {
+			fill: #ccc;
+			cursor: pointer;
+		}
 		.state:hover {
 			fill: yellow;
+		}
+		.background {
+			fill: none;
+			pointer-events: all;
+		}
+		.state.active {
+			fill: orange;
 		}
 	</style>
 	<head>
@@ -11,27 +28,31 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-	var width = 960,
-		height = 1160;
+	var width = 705,
+		height = 700;
+	var active = d3.select(null);
 	var svg = d3.select("body")
 				.append("svg")
 				.attr("width", width)
 				.attr("height", height);
-	/*			
-	var projection = d3.geoAlbers()
-						.center([102.55,23.63])
-						.rotate([4.4,0])
-						.parallels([20,30])
-						.scale(6000)
-						.translate([width/2, height/2]);*/
+
 	var projection = d3.geoConicConformal()
 							.rotate([102, 0])
 							.center([0, 24])
 							.parallels([17.5, 29.5])
-							.scale(1850)
+							.scale(1400)
 							.translate([width / 2, height / 2]);
 	var path = d3.geoPath()
 				.projection(projection);
+
+	svg.append("rect")
+		.attr("class", "background")
+		.attr("width", width)
+		.attr("height", height)
+		.on("click", reset);
+
+	var g = svg.append("g")
+				.style("stroke-width", "1.5px");
 
 	d3.json("mexico.json", function(error, mexico) {
 
@@ -41,25 +62,56 @@
 		/*svg.append("path")
 			.datum(states)
 			.attr("d", d3.geoPath().projection(d3.geoMercator()));*/
-		svg.selectAll(".states")
+		g.selectAll("path")
 			.data(states.features)
 			.enter()
 			.append("path")
 			.attr("class", function(d) { 
-				console.log("state " + d.name); 
 				return "state id" + d.id;
 			})
-			.attr("fill", function(d) {
-				var rgbR = Math.round(Math.random() * 255);
-				var rgbR = rgbR.toString(16);
-				var rgbG = Math.round(Math.random() * 255);
-				var rgbG = rgbG.toString(16);
-				var rgbB = Math.round(Math.random() * 255);
-				var rgbB = rgbG.toString(16);
-				return "#"+rgbR+rgbG+rgbB;
-			})
+			.on("click", clicked)
+			.attr("d", path);
+		g.append("path")
+			.datum(topojson.mesh(mexico, mexico.objects.states, function(a, b) { return a !== b; }))
+			.attr("class", "mesh")
 			.attr("d", path);
 	});
+	function clicked(d) {
+		if (active.node() === this) return reset();
+		active.classed("active", false);
+		active = d3.select(this).classed("active", true);
+		/*g.selectAll(".stateLabel")
+			.data(topojson.feature(states.features))
+			.enter().append("text")
+			.attr("class", function(d) { return "stateLabel id" + d.id; })
+			.attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
+			.attr("dy", ".35em")
+			.text(function(d) { return d.properties.name; });*/
+
+		var bounds = path.bounds(d),
+		dx = bounds[1][0] - bounds[0][0],
+		dy = bounds[1][1] - bounds[0][1],
+		x = (bounds[0][0] + bounds[1][0]) / 2,
+		y = (bounds[0][1] + bounds[1][1]) / 2,
+		scale = .9 / Math.max(dx / width, dy / height),
+		translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+		g.transition()
+			.duration(750)
+			.style("stroke-width", 1.5 / scale + "px")
+			.attr("transform", "translate(" + translate + ")scale(" + scale + ")");
+
+	}
+
+	function reset() {
+		active.classed("active", false);
+		active = d3.select(null);
+
+		g.transition()
+		.duration(750)
+		.style("stroke-width", "1.5px")
+		.attr("transform", "");
+	}
 		</script>
 	</body>
 </html>
