--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<style>
-		.mesh {
-			fill: none;
-			stroke: #fff;
-			stroke-linecap: round;
-			stroke-linejoin: round;
-		}
-		.state {
-			fill: #ccc;
-			cursor: pointer;
-		}
-		.state:hover {
-			fill: yellow;
-		}
-		.background {
-			fill: none;
-			pointer-events: all;
-		}
-		.state.active {
-			fill: orange;
-		}
 	</style>
 	<head>
 		<script type="text/javascript" src="d3/d3.js"></script>
 		<script src="//d3js.org/topojson.v1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 		<script type="text/javascript">
@@ -75,18 +56,18 @@
 			.datum(topojson.mesh(mexico, mexico.objects.states, function(a, b) { return a !== b; }))
 			.attr("class", "mesh")
 			.attr("d", path);
+		g.selectAll(".stateLabel")
+			.data(states.features)
+			.enter().append("text")
+			.attr("class", function(d) { return "stateLabel id" + d.id; })
+			.attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
+			.attr("dy", ".35em")
+			.text(function(d) { return d.properties.name; });
 	});
 	function clicked(d) {
 		if (active.node() === this) return reset();
 		active.classed("active", false);
 		active = d3.select(this).classed("active", true);
-		/*g.selectAll(".stateLabel")
-			.data(topojson.feature(states.features))
-			.enter().append("text")
-			.attr("class", function(d) { return "stateLabel id" + d.id; })
-			.attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
-			.attr("dy", ".35em")
-			.text(function(d) { return d.properties.name; });*/
 
 		var bounds = path.bounds(d),
 		dx = bounds[1][0] - bounds[0][0],
